# at32f403a

./: CMakeLists.txt  arm-none-eabi-gcc.cmake
JLink/: FlashMCU.jlink  ReadMCU.jlink
MAIN/inc/: app.hpp
MAIN/src/: app.cpp
Platform/: bitbanding.h  periphery.hpp
libraries/: CMakeLists.txt
libraries/cmsis/cm4/device_support/: system_at32f403a_407.c  system_at32f403a_407.h
libraries/cmsis/cm4/device_support/startup/gcc/: startup_at32f403a_407.s
libraries/cmsis/cm4/device_support/startup/iar/: startup_at32f403a_407.s
libraries/cmsis/cm4/device_support/startup/mdk/: startup_at32f403a_407.s
libraries/drivers/inc/: at32f403a_407_conf.h
middlewares/: usb_conf.h
middlewares/i2c_application_library/: i2c_application.c  i2c_application.h
middlewares/usbd_class/audio/: audio_class.c  audio_class.h  audio_conf.h  audio_desc.c  audio_desc.h
middlewares/usbd_class/audio_hid/: audio_conf.h  audio_hid_class.c  audio_hid_class.h  audio_hid_desc.c  audio_hid_desc.h
middlewares/usbd_class/cdc/: cdc_class.c  cdc_class.h
middlewares/usbd_class/composite_cdc_keyboard/: cdc_keyboard_class.c  cdc_keyboard_class.h  cdc_keyboard_desc.c  cdc_keyboard_desc.h
middlewares/usbd_class/custom_hid/: custom_hid_class.c  custom_hid_class.h  custom_hid_desc.c  custom_hid_desc.h
middlewares/usbd_class/hid_iap/: hid_iap_class.c  hid_iap_class.h  hid_iap_desc.c  hid_iap_desc.h
middlewares/usbd_class/keyboard/: keyboard_class.c  keyboard_class.h  keyboard_desc.c  keyboard_desc.h
middlewares/usbd_class/mouse/: mouse_class.c  mouse_class.h  mouse_desc.c  mouse_desc.h
middlewares/usbd_class/msc/: msc_bot_scsi.c  msc_bot_scsi.h  msc_class.c  msc_class.h  msc_desc.c  msc_desc.h
middlewares/usbd_class/printer/: printer_class.c  printer_class.h  printer_desc.c  printer_desc.h
